--- a/style/style.css
+++ b/style/style.css
@@ -103,7 +103,7 @@ nav li >a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 30px;
+    gap: 63px;
 }
 .love-title h4 {
     font-size: 2rem;
@@ -114,6 +114,7 @@ nav li >a {
     padding-left: 15px;
 }
 .love-content p {
+    width: 571px;
     margin-bottom: 30px;
 }
 .love-info h4 {
@@ -122,14 +123,66 @@ nav li >a {
 .love-img img {
     width: 100%;
 }
+.love-content {
+    width: 100%;
+}
 
+.love-img {
+    width: 100%;
+}
+.ten-year-badge {
+    right: 65px;
+    position: relative;
+    bottom: 60px;
+    width: 216px;
+    text-align: center;
+    background-color: #FF900E;
+    padding: 20px 0;
+    color: #fff;
+    border-radius: 10px;
+}
+.ten-year-badge h2 {
+    font-size: 3rem;
+    font-weight: 700;
+}
+/* facts section style */
+.facts-title {
+    margin: 80px 270px;
+}
+.facts-title h3 {
+    font-size: 2rem;
+    font-weight: 700;
+    color: #131313;
+}
+.facts-title p {
+    width: 542px;
+}
+.facts-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 80px 270px;
+    text-align: center;
+}
+.facts-box {
+    padding: 30px 20px;
+    border: 1px solid #FF900E;
+}
+.facts-box img {
+    width: 34px;
+    margin-bottom: 5px;
+}
+.facts-box h4 {
+    font-size: 1.8rem;
+}
 
 
 /* responsive style */
 @media only screen and (max-width: 576px) {
     nav,
     nav ul,
-    .feature-container
+    .feature-container,
+    .love-container
     {
       flex-direction: column;
     }
@@ -154,6 +207,12 @@ nav li >a {
         margin-top: 20px;
         font-size: 2rem;
     }
+    .love-container {
+        margin: 40px 20px;
+    }
+    .ten-year-badge {
+        right: 0px;
+    }
   }
 
   /* mediam devices */
@@ -164,5 +223,14 @@ nav li >a {
     }
     .hero-info {
         width: 100%;
+    }
+    .love-container,
+    .feature-container {
+        flex-direction: column;
+        margin: 50px 80px;
+    }
+    .ten-year-badge {
+        left: 190px;
+        bottom: 50px;
     }
   }
